--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,8 @@
     },
     "rules": {
         "indent": [
-            "error",
-            "tab"
+            "tab",
+            "error"
         ],
         "linebreak-style": [
             "error",
